--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-yfinance
-streamlit
-Ta-Lib
+yfinance==0.1.54
+pandas==1.0.5
+matplotlib==3.2.2
+requests==2.24.0
+ta==0.5.25
+numpy==1.19.0
+streamlit==0.62.1
